[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Start.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Kanit-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/KantikBold.tres" type="StyleBox" id=3]
[ext_resource path="res://Scenes/MenuButtons.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Difficulty.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Ui.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=4]
size = 67
outline_size = 4
outline_color = Color( 0.541176, 0.52549, 0.560784, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 60
outline_size = 2
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 100
outline_size = 14
outline_color = Color( 0.427451, 0.176471, 0.176471, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="Ui" type="Node2D"]
script = ExtResource( 6 )

[node name="MenuButtons" type="Node2D" parent="."]
position = Vector2( 0, 350 )
script = ExtResource( 4 )

[node name="Start" type="Node2D" parent="MenuButtons"]
script = ExtResource( 1 )

[node name="Title" type="Label" parent="MenuButtons/Start"]
margin_top = -350.0
margin_right = 576.0
margin_bottom = -249.0
theme = SubResource( 2 )
text = "Building Sqaush"
align = 1
valign = 1

[node name="StartMenu" type="VBoxContainer" parent="MenuButtons/Start"]
margin_right = 576.0
margin_bottom = 296.0

[node name="Start" type="Button" parent="MenuButtons/Start/StartMenu"]
margin_right = 576.0
margin_bottom = 96.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
enabled_focus_mode = 0
text = "Start"
flat = true

[node name="Settings" type="Button" parent="MenuButtons/Start/StartMenu"]
margin_top = 100.0
margin_right = 576.0
margin_bottom = 196.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
enabled_focus_mode = 0
text = "Settings"
flat = true

[node name="Quit" type="Button" parent="MenuButtons/Start/StartMenu"]
margin_top = 200.0
margin_right = 576.0
margin_bottom = 296.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
enabled_focus_mode = 0
text = "Quit"
flat = true

[node name="move_tween" type="Tween" parent="MenuButtons/Start"]

[node name="Difficulty" type="Node2D" parent="MenuButtons"]
position = Vector2( 576, 0 )
script = ExtResource( 5 )

[node name="DifficultyMenu" type="VBoxContainer" parent="MenuButtons/Difficulty"]
margin_right = 576.0
margin_bottom = 296.0

[node name="Easy" type="Button" parent="MenuButtons/Difficulty/DifficultyMenu"]
margin_right = 576.0
margin_bottom = 96.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
enabled_focus_mode = 0
text = "Easy"
flat = true

[node name="Medium" type="Button" parent="MenuButtons/Difficulty/DifficultyMenu"]
margin_top = 100.0
margin_right = 576.0
margin_bottom = 196.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
enabled_focus_mode = 0
text = "Medium"
flat = true

[node name="Hard" type="Button" parent="MenuButtons/Difficulty/DifficultyMenu"]
margin_top = 200.0
margin_right = 576.0
margin_bottom = 296.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
enabled_focus_mode = 0
text = "Hard"
flat = true

[node name="Back" type="Button" parent="MenuButtons/Difficulty/DifficultyMenu"]
margin_top = 300.0
margin_right = 576.0
margin_bottom = 396.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
enabled_focus_mode = 0
text = "Back"
flat = true

[node name="move_tween" type="Tween" parent="MenuButtons/Difficulty"]

[node name="Label" type="Label" parent="."]
margin_left = 208.0
margin_top = 96.0
margin_right = 358.0
margin_bottom = 246.0
theme = SubResource( 6 )
align = 1
valign = 1

[node name="Gameover" type="Label" parent="."]
visible = false
margin_left = 45.0
margin_top = 96.0
margin_right = 536.0
margin_bottom = 246.0
theme = SubResource( 6 )
text = "GameOver"
align = 1
valign = 1

[connection signal="pressed" from="MenuButtons/Start/StartMenu/Start" to="MenuButtons" method="_on_Start_pressed"]
[connection signal="pressed" from="MenuButtons/Start/StartMenu/Settings" to="MenuButtons" method="_on_Settings_pressed"]
[connection signal="pressed" from="MenuButtons/Start/StartMenu/Quit" to="MenuButtons" method="_on_Quit_pressed"]
[connection signal="pressed" from="MenuButtons/Difficulty/DifficultyMenu/Easy" to="MenuButtons" method="_on_Easy_pressed"]
[connection signal="pressed" from="MenuButtons/Difficulty/DifficultyMenu/Medium" to="MenuButtons" method="_on_Medium_pressed"]
[connection signal="pressed" from="MenuButtons/Difficulty/DifficultyMenu/Hard" to="MenuButtons" method="_on_Hard_pressed"]
[connection signal="pressed" from="MenuButtons/Difficulty/DifficultyMenu/Back" to="MenuButtons" method="_on_Back_pressed"]
